--- a/SOPManagement/Views/Home/LogIn.cshtml
+++ b/SOPManagement/Views/Home/LogIn.cshtml
@@ -1,27 +1,13 @@
 ﻿
-@{
-    ViewBag.Title = "Log In";
-}
-
 <div class="Content">
 
-    <div>
-        <div class="col-md-12">
-            <h1>SOP Alert:</h1>
-        </div>
+    <div class="sopmessagebox">
+
+        <font color="red">Error:</font>Your Session has timed out. Please close web browser (with all open tabs).
+        Re-open web browser to start a new session.
+
+
     </div>
-    <div>
-        <div class="col-md-12">
 
-
-            <h2>
-                <font color="red">
-
-                    Your session was timed out. Please close the broweser and browse application again to start a new session.
-                </font>
-            </h2>
-
-        </div>
-    </div>
 
 </div>
