--- a/SOPManagement/Content/Site.css
+++ b/SOPManagement/Content/Site.css
@@ -82,3 +82,26 @@ th {
     background-color: lightgray;
 }
 
+.menutextcss {
+    color: White;
+    font-weight: bold;
+    font-size:200% ;
+}
+
+.sopmenu {
+    margin: auto;
+    width: 100%;
+    border: 3px solid #73AD21;
+    padding: 5px;
+    background-color: #6699FF
+}
+
+
+.sopmessagebox {
+    font-size: 18px;
+    border-style: solid;
+    border-width: 2px;
+    padding: 10px;
+    width: 100%;
+    margin-top: 10px
+}
