--- a/SOPManagement/Views/Home/AdminSOP.cshtml
+++ b/SOPManagement/Views/Home/AdminSOP.cshtml
@@ -1,13 +1,22 @@
 ﻿@model SOPManagement.Models.SOPClass
 
-@*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>*@
 
 @{
-    ViewBag.Title = "SOP Administration";
+    ViewBag.Title = "SOP Admin";
 }
 
+<div style="font-size:36px;font-weight:bold">
+
+    @if (ViewBag.Title != null)
+    {
+        @ViewBag.Title
+    }
+    else
+    {
+        @TempData["PageTitle"]
+    }
+
+</div>
 
 @using (Html.BeginForm("AdminSOP", "Home", FormMethod.Post, new { @id = "Form1" }))
 {
@@ -33,7 +42,7 @@
                 <tr>
                     <td class="signoffield">
 
-                        @Html.DisplayNameFor(model => model.FileTitle)
+                        @Html.DisplayNameFor(model => model.FileTitle):
 
                     </td>
                     <td>
@@ -43,7 +52,7 @@
 
                 <tr>
                     <td class="signoffield">
-                        @Html.DisplayNameFor(model => model.SOPNo)
+                        @Html.DisplayNameFor(model => model.SOPNo):
                     </td>
                     <td>
                         @Model.SOPNo
@@ -52,7 +61,7 @@
 
                 <tr>
                     <td class="signoffield">
-                        @Html.DisplayNameFor(model => model.FileUrl)
+                        @Html.DisplayNameFor(model => model.FileUrl):
                     </td>
                     <td>
                         <a href="@Model.FileLink" target="_blank">@Model.FileTitle</a>
@@ -61,7 +70,7 @@
 
                 <tr>
                     <td class="signoffield">
-                        @Html.DisplayNameFor(model => model.FilePath)
+                        @Html.DisplayNameFor(model => model.FilePath):
                     </td>
                     <td>
                         @Model.FilePath
@@ -70,7 +79,7 @@
 
                 <tr>
                     <td class="signoffield">
-                        @Html.DisplayNameFor(model => model.ApprovalStatus)
+                        @Html.DisplayNameFor(model => model.ApprovalStatus):
                     </td>
                     <td>
                         @Model.ApprovalStatus
@@ -88,7 +97,7 @@
             <table>
                 <tr>
                     <td class="signoffield">
-                        @Html.LabelFor(model => model.Updatefreq)
+                        @Html.LabelFor(model => model.Updatefreq):
 
                     </td>
                     <td>
@@ -101,7 +110,7 @@
 
                 <tr>
                     <td class="signoffield">
-                        @Html.LabelFor(model => model.Updatefrequnit)
+                        @Html.LabelFor(model => model.Updatefrequnit):
 
                     </td>
 
@@ -125,7 +134,7 @@
             <table>
                 <tr>
                     <td class="signoffield">
-                        SOP Owner
+                        SOP Owner:
                     </td>
 
                 </tr>
@@ -149,7 +158,7 @@
             <table>
                 <tr>
                     <td class="signoffield">
-                        SOP Approver
+                        SOP Approver:
                     </td>
 
                 </tr>
@@ -175,7 +184,7 @@
 
                 <tr class="no-bottom-border" id="revhrow">
                     <td class="signoffield">
-                        SOP Reviewers
+                        SOP Reviewers:
                     </td>
 
                 </tr>
@@ -187,9 +196,9 @@
 
                     <tr>
 
-                        <th>Full Name</th>
+                        <th>Full Name:</th>
 
-                        <th>Email</th>
+                        <th>Email:</th>
 
                         <th></th>
 
@@ -255,7 +264,7 @@
 
                 <tr class="no-bottom-border" id="revhrow">
                     <td class="signoffield">
-                        Read Accesss to
+                        Read Accesss to:
                     </td>
 
                 </tr>
@@ -267,7 +276,7 @@
                 <tr>
                     <td class="signoffield">
 
-                        @Html.DisplayNameFor(model => model.AllUsersReadAcc)
+                        @Html.DisplayNameFor(model => model.AllUsersReadAcc):
 
                     </td>
 
@@ -284,7 +293,7 @@
                 <tr>
                     <td class="signoffield">
 
-                        @Html.DisplayNameFor(model => model.DepartmentName)
+                        @Html.DisplayNameFor(model => model.DepartmentName):
 
                     </td>
 
@@ -303,7 +312,7 @@
                 <tr>
                     <td class="signoffield">
 
-                        @Html.DisplayNameFor(model => model.FileViewers)
+                        @Html.DisplayNameFor(model => model.FileViewers):
 
                     </td>
 
@@ -315,9 +324,9 @@
 
                                 <tr>
 
-                                    <th>Full Name</th>
+                                    <th>Full Name:</th>
 
-                                    <th>Email</th>
+                                    <th>Email:</th>
 
                                     <th></th>
 
@@ -383,6 +392,31 @@
 
         </p>
 
+        <p>
+            <table>
+
+                <tr>
+                    <td class="signoffield" colspan="2">
+                        Document Archive Control:
+                    </td>
+
+                </tr>
+                <tr>
+                    <td style="width:30%">
+                        <label for="sgnagrmnt"> <b>Archive Document: </b> </label>
+                        @Html.CheckBoxFor(model => model.SOPArchived, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.SOPArchived, "", new { @class = "text-danger" })
+
+                    </td>
+                    <td style="border-left:hidden">
+                        Note: Remove document from SOP list.
+                    </td>
+
+                </tr>
+            </table>
+
+        </p>
+
    </div>
 
 
@@ -395,13 +429,13 @@
             <table>
 
                 <tr>
-                    <td style="text-align:center">
+                    @*<td style="text-align:center">
 
                         @using (Html.BeginForm("AdminSOP", "Home", FormMethod.Post, new { @id = "Form2" }))
                         {
                             <input type="submit" value="Archive" name="archive" id="soparchive" />
                         }
-                    </td>
+                    </td>*@
                     <td style="text-align:center">
                         <input value="Submit Changes" type="submit" onclick="confirmsave();"  name="save" id="sopsubmit" />
                     </td>
@@ -584,6 +618,11 @@
 
         var vwrarr = JSON.stringify(viewersarr);  //send json data to controller
 
+        //get archived entry
+
+
+        var hasarchived = document.getElementById("SOPArchived").checked;
+
 
         DisplayProgressMessage(document.getElementById('sopsubmit'), "Processing SOP");
 
@@ -602,6 +641,7 @@
             sop.append("AllUsersReadAcc", chkAllVwrs);
             sop.append("DepartmentCode", vwrdeptcode);
             sop.append("FileviewersArr", vwrarr);
+            sop.append("SOPArchived", hasarchived);
 
 
 
@@ -670,6 +710,7 @@
 
         return true;
     }
+
 
 
 
