--- a/SOPManagement/Views/Shared/_Layout.cshtml
+++ b/SOPManagement/Views/Shared/_Layout.cshtml
@@ -6,76 +6,126 @@
     <title>@ViewBag.Title - SOP ASP.NET Web Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
+
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:darkred">
+    @*<div class="navbar navbar-inverse navbar-fixed-top" style="background-color:#6699FF">*@
+    
+
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:#6699FF">
+
+        <p class="nav navbar-text navbar-left;"><img src="~/Content/Images/RadLogoBan.jpg" /> </p>
+
         <div class="container">
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            
-                @Html.ActionLink("SOP", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
 
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("SOP Dashboard", "SOPDashboard", "Home", new { target = "_blank" })</li>
-                    <li>@Html.ActionLink("Upload or Create SOP", "CreateUploadSOP", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                @*@Html.ActionLink("SOP", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+            </div>
+
+
+            <div class="navbar-collapse collapse">
+                <p>
+                    <ul class="nav navbar-nav">
+
+
+                        @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
+
+                        <li>@Html.ActionLink("SOP Dashboard", "SOPDashboard", "Home", new { Style = "color:White;font-size:150%;font-weight: bold;", target = "_blank" })</li>
+                        <li>@Html.ActionLink("Create Upload SOP", "CreateUploadSOP", "Home", new { Style = "color:White;font-size:150%;font-weight: bold;" })</li>
+                        <li>@Html.ActionLink("Data Maintenance (HR/IT)", "DataMaintHRIT", "Home", new { Style = "color:White;font-size:150%;font-weight: bold;" })</li>
+                    </ul>
+                </p>
                 @*@User.Identity.Name!*@
 
-                <p class="nav navbar-text navbar-right">Hello, @Session["UserFullName"] </p>
+                @*<p class="nav navbar-text navbar-right" style="color:white">Hello, @Session["UserFullName"] </p>*@
+
+                <p class="nav navbar-text navbar-right" style="color:white;">
+                    @Html.ActionLink("Access SOP Archive", "AccessArchive", "Home",
+                    new { Style = "color:White;font-weight: bold;text-decoration:none;font-size:100%;", target = "_blank" })
+                </p>
+
+
+
             </div>
+
+            @*<div class="navbar-collapse collapse">*@
         </div>
     </div>
+
+
+
     <div class="container body-content">
-        <div class="row">
-            <div class="col-md-2"> <img src="~/Content/Images/RadiantLogo.jpg" /></div>
-            <div class="col-md-10" style="float:left"><h4><b> @ViewBag.Title </b></h4></div>
+
+        @*@if (TempData["SOPMsg"] == null)
+        {
+
+        <div class="col-md-12" style="font-size: 36px;margin-top:10px">
+
+            <br />
+            <b>
+                @if (ViewBag.Title != null)
+                {
+                    @ViewBag.Title
+                }
+                else
+                {
+                    @TempData["PageTitle"]
+                }
+
+            </b>
         </div>
-        @RenderBody()
-        <hr />
-        <footer>
+        }*@
+        
+        <br />
+        <br />
+         <div class="col-md-12">
+            @RenderBody()
+        </div>
+
+        @*<footer>
             <p>&copy; @DateTime.Now.Year - SOP ASP.NET Application</p>
-        </footer>
+        </footer>*@
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
 
-    @*Add this JavaScript in _Layout (when session end 1 minute before this code makes redirect, it makes count time after user last action, not first visit on site)*@
+        @*Add this JavaScript in _Layout (when session end 1 minute before this code makes redirect, it makes count time after user last action, not first visit on site)*@
 
-    @*<script>
-    //session end
-    var sessionTimeoutWarning = @Session.Timeout- 1;
+        @*<script>
+        //session end
+        var sessionTimeoutWarning = @Session.Timeout- 1;
 
-        var sTimeout = parseInt(sessionTimeoutWarning) * 60 * 1000;
+            var sTimeout = parseInt(sessionTimeoutWarning) * 60 * 1000;
 
-        var timeoutHandle = window.setTimeout("SessionEnd()", sTimeout);
+            var timeoutHandle = window.setTimeout("SessionEnd()", sTimeout);
 
-        //setTimeout(function SessionEnd() {
-        //    alert('layout');
-        //    window.location = "/Home/LogOff";
-        //}, sTimeout);
+            //setTimeout(function SessionEnd() {
+            //    alert('layout');
+            //    window.location = "/Home/LogOff";
+            //}, sTimeout);
 
-        function SessionEnd() {
-            
-        window.location = "/Home/LogOff";
-        }
+            function SessionEnd() {
 
-        function UpdateTimeoutTimer() {
-            clearTimeout(myTimeReminder);
-            clearTimeout(myTimeOut);
-            myTimeReminder = setTimeout('doReminder()', sessionTimeReminder);
-            myTimeOut = setTimeout('doRedirect()', sessionTimeout);
-        } 
-    </script>*@
+            window.location = "/Home/LogOff";
+            }
+
+            function UpdateTimeoutTimer() {
+                clearTimeout(myTimeReminder);
+                clearTimeout(myTimeOut);
+                myTimeReminder = setTimeout('doReminder()', sessionTimeReminder);
+                myTimeOut = setTimeout('doRedirect()', sessionTimeout);
+            }
+        </script>*@
 
 </body>
 </html>
