complete with few view changes

--- a/SOPManagement/Views/Home/CleintServerErr.cshtml
+++ b/SOPManagement/Views/Home/CleintServerErr.cshtml
@@ -14,7 +14,7 @@
 
     </div>
 
-    <font color="red">  Critical ERROR:</font> Critical client or server error occured. Please contact IT.  
+    <font color="red">  Critical ERROR:</font> Critical client or server error occured. Close the browser, open the application and try again.   
 
 
 
