--- a/SOPManagement/Views/Home/PublishFile.cshtml
+++ b/SOPManagement/Views/Home/PublishFile.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Publish SOP";
+    TempData["PageTitle"] = "Publish SOP";
 }
 <div class="sopmessagebox">
     <div style="font-size:36px;font-weight:bold">
