--- a/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
+++ b/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
@@ -19,7 +19,7 @@
     </div>
 
 
-    <font color="red">Error:</font>SOP must be published to allow user access.
+    <font color="red"><b>ERROR:</b></font>SOP must be published to allow user access.
 
 
     <br />
