Completed solution after giving it to Martin for testing

--- a/SOPManagement/Views/Home/CleintServerErr.cshtml
+++ b/SOPManagement/Views/Home/CleintServerErr.cshtml
@@ -20,7 +20,7 @@
 
     <br />
     <br />
-    <button onclick="goBack()">Go Back</button>
+    @*<button onclick="goBack()">Go Back</button>*@
 </div>
 
 
