--- a/SOPManagement/Views/Home/SOPMessage.cshtml
+++ b/SOPManagement/Views/Home/SOPMessage.cshtml
@@ -30,7 +30,7 @@
     <b> SOP Name:</b> @TempData["SOPName"].ToString()
     <br />
     <br />
-    <button onclick="goBack()">Go Back</button>
+    @*<button onclick="goBack()">Go Back</button>*@
 </div>
 
 
