--- a/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
+++ b/SOPManagement/Views/Home/SOPNoAcessMsg.cshtml
@@ -36,7 +36,7 @@
 
     <br />
     <br />
-    <button onclick="goBack()">Go Back</button>
+    @*<button onclick="goBack()">Go Back</button>*@
 </div>
 
 
